--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <div class="max-w-4xl mx-auto p-8">
-  <h1 class="text-4xl font-bold text-blue-600">Rails 8.1 với Solid Trio!</h1>
+  <h1 class="text-4xl font-bold text-blue-600">Hello from Bukmeup</h1>
+  <p class="mt-4 text-gray-600">Rails 8.1 với Solid Trio!</p>
   <p class="mt-4 text-gray-600">PostgreSQL + Importmap + Tailwind CSS</p>
 </div>
