--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -66,7 +66,7 @@
     <div>
       <%= form.label :time_zone, class: "block text-sm font-medium text-gray-700" %>
       <%= form.time_zone_select :time_zone,
-            ActiveSupport::TimeZone.all.map(&:name),
+            ActiveSupport::TimeZone.all,
             { default: @user.time_zone || "Hanoi" },
             class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500" %>
       <p class="mt-1 text-sm text-gray-500">Used to display booking times in your local timezone</p>
