--- a/app/views/dashboard/businesses/edit.html.erb
+++ b/app/views/dashboard/businesses/edit.html.erb
@@ -1,6 +1,8 @@
-<div class="max-w-2xl mx-auto mt-8 px-4">
+<div class="max-w-4xl mx-auto mt-8 px-4">
   <h1 class="text-3xl font-bold mb-2">Edit Business Profile</h1>
   <p class="text-gray-600 mb-6">Update your business information.</p>
 
-  <%= render "form", business: @business %>
+  <div class="card p-6">
+    <%= render "form", business: @business %>
+  </div>
 </div>
